# dmath

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: main.yml
include/common/: features.h  libm.h  limits.h  math.h
include/linux/: features.h  float.h  stdint.h
include/linux/bits/: alltypes.h  float.h  limits.h  stdint.h
include/public/: math.h
include/win32/: features.h
tests/: main.c
